--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,35 @@
         "limits": "c",
         "regex": "c",
         "*.md": "c",
-        "*.idl": "c"
+        "*.idl": "c",
+        "chrono": "c",
+        "rope": "c",
+        "ranges": "c",
+        "variant": "c",
+        "*.rst": "c",
+        "buffer": "c",
+        "internet": "c",
+        "cmath": "c",
+        "complex": "c",
+        "io_context": "c",
+        "bitset": "c",
+        "forward_list": "c",
+        "list": "c",
+        "string": "c",
+        "hash_map": "c",
+        "hash_set": "c",
+        "slist": "c",
+        "valarray": "c",
+        "set": "c",
+        "format": "c",
+        "socket": "c",
+        "span": "c",
+        "sstream": "c",
+        "coroutine": "c",
+        "memory": "c",
+        "propagate_const": "c",
+        "stacktrace": "c",
+        "typeindex": "c"
     },
     "C_Cpp.codeAnalysis.exclude": {
         "cglm/call.h": true,
