fixed Templates and replaced the location uniform array in Shader with a Hashmap

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,7 +63,9 @@
         "memory": "c",
         "propagate_const": "c",
         "stacktrace": "c",
-        "typeindex": "c"
+        "typeindex": "c",
+        "unordered_map": "c",
+        "unordered_set": "c"
     },
     "C_Cpp.codeAnalysis.exclude": {
         "cglm/call.h": true,
