replaced arrays with Vector for scene_objects and to_update in Scene3D struct

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,8 @@
         "stacktrace": "c",
         "typeindex": "c",
         "unordered_map": "c",
-        "unordered_set": "c"
+        "unordered_set": "c",
+        "expected": "c"
     },
     "C_Cpp.codeAnalysis.exclude": {
         "cglm/call.h": true,
