changed HASHMAP_REMOVE function declaration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,37 @@
         "typeindex": "c",
         "unordered_map": "c",
         "unordered_set": "c",
-        "expected": "c"
+        "expected": "c",
+        "any": "c",
+        "barrier": "c",
+        "bit": "c",
+        "charconv": "c",
+        "codecvt": "c",
+        "concepts": "c",
+        "condition_variable": "c",
+        "cstddef": "c",
+        "exception": "c",
+        "executor": "c",
+        "iterator": "c",
+        "memory_resource": "c",
+        "numeric": "c",
+        "ratio": "c",
+        "scope": "c",
+        "synchronized_value": "c",
+        "algorithm": "c",
+        "fstream": "c",
+        "future": "c",
+        "iomanip": "c",
+        "istream": "c",
+        "latch": "c",
+        "mutex": "c",
+        "scoped_allocator": "c",
+        "semaphore": "c",
+        "shared_mutex": "c",
+        "stop_token": "c",
+        "streambuf": "c",
+        "syncstream": "c",
+        "thread": "c"
     },
     "C_Cpp.codeAnalysis.exclude": {
         "cglm/call.h": true,
